--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "codekata",
+  "name": "leettomato",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "deploy": "pnpm build && wrangler pages deploy",
-    "deploy:preview": "pnpm build && wrangler pages deploy --branch preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -22,7 +20,6 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11",
-    "wrangler": "^4.61.0"
+    "vite": "^5.4.11"
   }
 }
